<resources>
    <string name="app_name">GoDroid</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_password">Enter Password</string>
    <string name="hint_name">Enter Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="sign_up">SIGN UP</string>
    <string name="has_registered_login">Already a member? Sign In!</string>
    <string name="phone">Phone</string>
    <string name="title_activity_home">Find Car</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="booking">View Cars</string>
    <string name="search_cars">Search Cars</string>
    <string name="my_profile">My Profile</string>
    <string name="home">Home</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_by_car_category">SELECT CAR BY CATEGORY</string>

    <string-array name="car_option">
        <item>All</item>
        <item>7 Seater</item>
        <item>4 Seater</item>
        <item>2 Seater</item>
    </string-array>

    <string-array name="car_size">
        <item>Mini</item>
        <item>Economy</item>
        <item>SUV</item>
        <item>7 Seater</item>
        <item>Convertible</item>
    </string-array>

    <string name="title_activity_destination">Choose Destination</string>
    <string name="my_destination">My destination</string>
    <string name="_12_new_crescent_road">Nygatan 11, 24231 Horby</string>
    <string name="distance_by_kilometers">Distance by kilometers</string>
    <string name="price_estimation">Rental Price Estimation</string>
    <string name="title_activity_location">Destination</string>
    <string name="title_activity_booking">Book a car</string>
    <string name="title_activity_account">Account</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="reservation">Reservation</string>
    <string name="title_activity_checkout">Make Payment</string>
    <string name="info">Policy &amp; Terms</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="reset_password">Enter your email to reset your password</string>
    <string name="password_reset_message">Password recovery instruction has been sent to you</string>
    <string name="hint__email">email</string>
    <string name="mText">User</string>


    <string name="date_label">Date</string>
    <string name="start_time_label">Start Time</string>
    <string name="end_time_label">End Time</string>
    <string name="default_start_time">4:00 PM</string>
    <string name="default_end_time">5:00 PM</string>
    <string name="default_date">26 Apr 19</string>

    <string name="all_type_cars">All Type Cars</string>
    <string name="rate_label">Rate</string>
    <string name="default_rate">$8</string>
    <string name="payment">Payment</string>
    <string name="edit">Edit</string>
    <string name="confirm_reservation">Confirm Reservation</string>


    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">SignUp Here!</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="name">Full Name</string>
    <string name="address_hint">Street Address</string>
    <string name="phone_number">Phone</string>
    <string name="card_id">#Card_ID that you received through email</string>
    <string name="resend_card_id">Resend Card ID</string>
    <string name="input_error_name">Name</string>
    <string name="input_error_nick_name">Please enter your Nick Name</string>
    <string name="input_error_email">Email</string>
    <string name="input_error_email_invalid">Please enter a valid email address</string>
    <string name="input_error_password">Please enter your password</string>
    <string name="input_error_password_length">Password Length should be atleast 6 characters</string>
    <string name="input_error">Please Fill the details</string>
    <string name="address_street_hint">Street Address</string>
    <string name="address_apt_number__hint">APT Number</string>
    <string name="address_city_hint">City</string>
    <string name="address_zipcode_hint">Zip Code</string>
    <string name="title_registration">Registration</string>
    <string name="car_name_hint">Car Name</string>
    <string name="car_color_hint">Car Color</string>
    <string name="car_number_hint">Car Number</string>
    <string name="car_rate_hint">Car Rate</string>
    <string name="save">Save</string>
    <string name="all_types">All Types</string>
    <string name="station_label">Station</string>
    <string name="vehicle_type">Vehicle Type</string>

    <string name="issue_label">Issue</string>
    <string name="submit_label">SUBMIT</string>
    =======
    <string name="payment_add_message">Add Payment</string>


    <!--guide-->
    <string name="title_help">Guide to rent a car</string>
    <string name="guide">Go to the home page where you can see   multiple stations that are present.\n\nChoose the station that is closest to you.\n\n
Next,you enter the date and timings for which you want to rent a car.\n\n
Dont forget to choose the type of car that you would like to rent.\n\n
Review your order and confirm to reserve your car.</string>


    <!--payment details string values-->
    <string name="card_number">Card Number</string>
    <string name="exp_date">Exp. Date</string>
    <string name="cvv">Cvv</string>
    <string name="zip_code">Zip Code</string>
    <string name="default_month">MM</string>
    <string name="default_year">YYYY</string>
    <string name="input_error_date_year">Please enter a valid year</string>
    <string name="input_error_date_month">Please enter a valid month</string>
    <string name="payment_exp_month_label">Exp. Month</string>
    <string name="payment_exp_year_label">Exp. Year</string>


    <!--my account string values-->
    <string name="name_on_my_account">Name</string>
    <string name="email_on_my_account">Email</string>
    <string name="phone_on_my_account">Phone</string>
    <string name="zip_on_my_account">Zip</string>
    <string name="city_on_my_account">City</string>
    <string name="street_on_my_account">Street</string>
    <string name="apt_on_my_account">APT</string>

    <!--booking details string values-->
    <string name="extend_trip_label">Extend</string>
    <string name="pickup_label">Pickup</string>
    <string name="charges_label">Cost</string>
    <string name="finish_trip_label">Finish</string>
</resources>