<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.inducesmile.taxirental.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_above="@+id/link_to_login"
            android:layout_marginBottom="@dimen/_24sdp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="1dp"
                android:src="@drawable/rentone" />

            <ProgressBar
                android:id="@+id/login_user_progress"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:indeterminate="true"
                android:translationZ="2dp"
                android:visibility="invisible" />


            <EditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_email"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black" />


            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_password"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/address_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone_number"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:gravity="top|left"
                android:hint="@string/address_street_hint"
                android:inputType="textMultiLine"
                android:scrollHorizontally="false"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/address_apt_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone_number"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:gravity="top|left"
                android:hint="@string/address_apt_number__hint"
                android:inputType="textMultiLine"
                android:scrollHorizontally="false"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/address_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone_number"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:gravity="top|left"
                android:hint="@string/address_city_hint"
                android:inputType="textMultiLine"
                android:scrollHorizontally="false"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/address_zip_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone_number"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:gravity="top|left"
                android:hint="@string/address_zipcode_hint"
                android:inputType="textMultiLine"
                android:scrollHorizontally="false"
                android:textColor="@color/black" />


            <LinearLayout
                android:id="@+id/payment_details"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="left|center"
                    android:text="@string/payment"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/payment_selector"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@drawable/button_filter"
                    android:text="@string/payment_add_message"
                    android:textSize="18sp" />

            </LinearLayout>





            <Button
                android:id="@+id/register_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dip"
                android:background="@color/colorPrimary"
                android:padding="@dimen/_4sdp"
                android:text="@string/sign_up"
                android:textColor="@color/colorWhite" />




        </LinearLayout>

        <TextView
            android:id="@+id/link_to_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/has_registered_login"
            android:textColor="@color/colorWhite" />

    </RelativeLayout>

</LinearLayout>