<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.inducesmile.taxirental.SignInActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_24sdp"
            android:paddingRight="@dimen/_24sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_32sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/rentone" />

            <ProgressBar
                android:id="@+id/login_user_progress"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:indeterminate="true"
                android:translationZ="2dp"
                android:visibility="invisible" />


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@color/colorWhite"
                android:hint="@string/hint__email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorSecondaryText" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@color/colorWhite"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorSecondaryText" />


            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@color/colorPrimaryDark"
                android:elevation="4dp"
                android:padding="@dimen/_16sdp"

                android:text="@string/btn_login"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/forgotten_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_12sdp"
                android:gravity="center"
                android:text="Forgot Password?"
                android:padding="@dimen/_4sdp"
                android:background="@color/colorAccent"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/btn_link_to_register"
            android:textColor="@color/colorWhite" />

    </RelativeLayout>

</LinearLayout>
