<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.inducesmile.taxirental.fragment.ProfileFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:background="@color/colorPrimary"
            android:layout_gravity="top"
            android:orientation="vertical">

        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleView"
            android:layout_width="163dp"
            android:layout_height="118dp"
            android:layout_gravity="top|center"
            android:layout_marginTop="@dimen/_40sdp"
            android:elevation="@dimen/_2sdp"
            android:src="@drawable/profile" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_16sdp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/name_on_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/hint_name"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_14sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:paddingRight="@dimen/_16sdp"
            android:paddingLeft="@dimen/_16sdp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/envelope"
                    android:contentDescription="@string/app_name"/>

                <TextView
                    android:id="@+id/email_on_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_6sdp"
                    android:text="@string/hint_email"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/_11sdp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/phone"
                    android:contentDescription="@string/app_name"/>

                <TextView
                    android:id="@+id/phone_on_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_6sdp"
                    android:text="@string/phone"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/_11sdp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:gravity="center"
            android:orientation="horizontal"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/street_on_my_account"
        android:layout_width="375dp"
        android:layout_height="38dp"
        android:layout_below="@+id/phone_on_my_account"
        android:layout_margin="10dp"
        android:paddingLeft="40dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/street_on_my_account"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/street_on_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/apt_on_my_account"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/street_on_my_account"
        android:layout_margin="10dp"
        android:paddingLeft="40dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/apt_on_my_account"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/apt_on_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/city_on_my_account"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="40dp"
        android:layout_below="@+id/apt_on_my_account"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/city_on_my_account"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/city_on_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/zip_on_my_account"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/city_on_my_account"
        android:layout_margin="10dp"
        android:paddingLeft="40dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/zip_on_my_account"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/zip_on_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
